# convert_heic

./: .gitignore  NOTICE.md  README.md  pyproject.toml
src/heic_2_jpg/: __init__.py  convert_heic.py
